update: support theme mode switch

--- a/react/antd/src/global.css
+++ b/react/antd/src/global.css
@@ -1,5 +1,11 @@
-html,
 body {
   margin: 0;
   padding: 0;
+  background: #f2f5fa; /* fix: mac os scroll bg */
+}
+
+html[data-theme-mode="dark"] {
+  body {
+    background: #000; /* fix: mac os scroll bg */
+  }
 }
